google.css
html {
    height: 100%;

}
/*Navbar Section*/
    #navbar {
        display: grid;
        grid-template-columns: 50px 50px 1fr 50px 50px 50px 50px;
        grid-template-rows: 50px;
        grid-template-areas:
                "about store . gmail image menu sign-in";
        margin: 0 20px 0 10px;
    }

    a,p {
        text-decoration: none;
        color: rgba(0,0,0,0.87);
        font-size: 13px;
        font-family: Arial, Helvetica, sans-serif;
    }
    a:hover {
        text-decoration: underline;
    }

    #about {
        grid-area: about;
        justify-self: center;
        align-self: center;
    }
    #store {
        grid-area: store;
        justify-self: center;
        align-self: center;
    }
    #gmail {
        grid-area: gmail;
        justify-self: center;
        align-self: center;
    }
    #image {
        grid-area: image;
        justify-self: center;
        align-self: center;
    }
    #menu {
        opacity: 60%;
        grid-area: menu;
        justify-self: center;
        align-self: center;
        margin-right: 10px;
    }

    #sign-in {
        grid-area: sign-in;
        justify-self: center;
        align-self: center;
        background-color: #4683ea;
        height: 30px;
        width: 65px;
        line-height: 30px;
        text-align: center;
        color: white;
        font-weight: bold;
        border-radius: 2px;
    }

/*Main Sectiion*/
    #main {
        min-height: 100%;
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 250px 70px 70px 250px;
        grid-template-areas:
        ". logo ."
        ". search ."
        " . flexbox ."
        ". google-text .";
    }

    .logofont {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 95px;
    }
    .dodgerblue { color: dodgerblue;
    }
    .orangered { color: orangered;
    }
    .o { color: orange;
    }
    .l { color: green;
    }

    /*#logo {
        grid-area: logo;
        justify-self: center;
        align-self: end;
    }
     */

    #search {
        grid-area: search;
        height: 40px;
        width: 100%;
        align-self: center;
        justify-self: center;
        border: 1px solid rgba(0, 0, 0, 0.151);
        border-radius: 30px;
    }

    #search:focus {
        box-shadow: 1px 1px 5px grey;
    }
    #search:hover {
        box-shadow: 1px 1px 5px grey;
    }

    #flexbox {
        display: flexbox;
        grid-area: flexbox;
        justify-self: center;
        align-self: center;
        justify-self: center;
    }
    #google-search-btn {
        border: none;
        font-size: 15px;
        color: #5F6368;
        margin-right: 10px;
        padding: 7px 15px 7px 15px;
        border-radius: 5px;
    }
    #random-search-btn {
        border: none;
        font-size: 15px;
        color: #5F6368;
        padding: 7px 15px 7px 15px;
        border-radius: 5px;
    }
    #google-search-btn:hover{
    border: 1px solid rgba(0,0,0,0.226);
    }
    #random-search-btn:hover{
    border: 1px solid rgba(0,0,0,0.226);
    }

    #google-text {
        grid-area: google-text;
        justify-self: center;
    }
    #russian {
        color: blue;
    }


/*Footer Section*/
    #footer {
        position: absolute;
        bottom: 0;
        display: grid;
        grid-template-columns: 100px 100px 150px 1200px 70px 70px 70px;
        grid-template-rows: 50px;
        grid-template-areas:
                "advertising business hsw . privacy terms settings";
    }
    #advertising {
        grid-area: advertising;
        justify-self: center;
        align-self: center;

    }
    #business {
        grid-area: business;
        justify-self: center;
        align-self: center;
    }
    #hsw {
        grid-area: hsw;
        justify-self: center;
        align-self: center;
    }
    #privacy {
        grid-area: privacy;
        justify-self: center;
        align-self: center;
    }
    #terms {
        grid-area: terms;
        justify-self: center;
        align-self: center;
    }
    #settings {
        grid-area: settings;
        justify-self: center;
        align-self: center;
    }

